[package]
name = "awesome-wayland"
description = "Bindings and glue to interface with Awesome Lua libraries"
version = "0.0.0"
authors = ["Timidger <APragmaticPlace@gmail.com>"]

[dependencies]
libc = "0.2.*"
lua-sys = { version = "0.1.*", features = [] } # No compile-time bindings
lazy_static = "0.2"

[dev-dependencies]
wlc = { version = "2.0.1", features = ["unsafe-stable"] } 
